--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@ source-code: https://github.com/oralhistoryasdata/template
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Oral History as Data Template/Demo
+title: Context Halloween
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Analyze and publish coded oral history and qualitative interviews
+tagline: Selected episodes of Context
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "The Oral History as Data (OHD) tool is a static website generator that allows users to analyze and publish coded oral history or qualitative interview files. More information about the project and how to use it be found on [the project website](https://oralhistoryasdata.github.io/about.html)."
+description: "Test repository using four interviews from Context podcast"
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
-author: dcnb
+author: mk
 
 ##########
 # COLLECTION SETTINGS
@@ -57,7 +57,7 @@ organization-logo-nav: https://cdil.lib.uidaho.edu/assets/img/logo.png
 # ROBOTS EXCLUDE
 #
 # set noindex to true if you do NOT want Google to index your site
-# noindex: true 
+noindex: true 
 
 ##########
 # BUILD SETTINGS 
